# Vitawave

./: .gitignore  CMakeLists.txt  README.md  param.sfo
assets/livearea/: template.xml
docs/: creating_themes.md
include/: audio_engine.h  decoder.h  equalizer.h  file_browser.h  font_renderer.h  globals.h  kiss_fft_log.h  media_db.h  metadata.h  noto.h  playlist.h  theme.h  ui.h  visualizer.h
src/: audio_engine.c  decoder_flac.c  decoder_mp3.c  decoder_ogg.c  equalizer.c  file_browser.c  font_renderer.c  gifdec.c  main.c  media_db.c  metadata.c  noto.c  noto_compat.c  playlist.c  theme.c  ui.c  visualizer.c  vita_shims.c  vita_sqlite.c
themes/classic-light/: theme.ini
themes/damask/: theme.ini
themes/halcyon/: theme.ini
themes/lazuli/: theme.ini
themes/nexus/: theme.ini
themes/terminus/: theme.ini
themes/voltaic/: theme.ini
